# RT-CETSA-Analysis

./: .gitignore  test_exp_curve_all.csv  test_exp_param_full.csv
dashboard/: .bumpversion.cfg  .env-sample  README.md  env-base.yml  env-linux-dump.yml  env-os-dump.yml  pyproject.toml  run_dataset.sh
dashboard/src/rt_cetsa/: .sample-env  dashboard.py
notebooks/: test_nicks_code.ipynb
rt_cetsa_analysis/src/: prepare_data.R  prepare_params.R  prepare_values.R
